AI 150245: Import and add to the l10n builds new and updated translations for:   zh_CN, es_US, ru, ko, da, el, tr, pt, pt_PT, sv.
Automated import of CL 150245

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -15,103 +15,103 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="all_images">"Все изображения"</string>
+    <string name="all_images">"Все картинки"</string>
     <string name="all_videos">"Все видео"</string>
-    <string name="camera_label">"Камера"</string>
+    <string name="camera_label">"Фотографии"</string>
     <string name="video_camera_label">"Видеокамера"</string>
-    <string name="gallery_picker_label">"Галерея"</string>
-    <string name="gallery_camera_bucket_name">"Фотографии с камеры"</string>
-    <string name="gallery_camera_videos_bucket_name">"Видео с камеры"</string>
-    <string name="switch_to_video_lable">"Перейти в режим видео"</string>
-    <string name="switch_to_camera_lable">"Перейти в режим камеры"</string>
-    <string name="crop_label">"Обрезать изображение"</string>
-    <string name="view_label">"Просмотреть изображение"</string>
+    <string name="gallery_picker_label">"Фотоальбом"</string>
+    <string name="gallery_camera_bucket_name">"Снимки, сделанные камерой"</string>
+    <string name="gallery_camera_videos_bucket_name">"Видео"</string>
+    <string name="switch_to_video_lable">"Переключить на видео"</string>
+    <string name="switch_to_camera_lable">"Переключить на камеру"</string>
+    <string name="crop_label">"Обрезать фотографию"</string>
+    <string name="view_label">"Просмотр картинки"</string>
     <string name="preferences_label">"Настройки камеры"</string>
-    <string name="wait">"Подождите…"</string>
-    <string name="no_storage">"Перед использованием камеры вставьте карту SD."</string>
-    <string name="not_enough_space">"Карта SD заполнена."</string>
+    <string name="wait">"Подождите..."</string>
+    <string name="no_storage">"Прежде чем использовать камеру, вставьте SD-карту."</string>
+    <string name="not_enough_space">"Ваша SD-карта заполнена."</string>
     <string name="preparing_sd">"Подготовка карты SD..."</string>
-    <string name="wallpaper">"Установка фонового рисунка, подождите…"</string>
-    <string name="savingImage">"Идет сохранение изображения…"</string>
-    <string name="runningFaceDetection">"Подождите…"</string>
+    <string name="wallpaper">"Установка обоев, подождите..."</string>
+    <string name="savingImage">"Сохранение картинки..."</string>
+    <string name="runningFaceDetection">"Подождите..."</string>
     <string name="flip_orientation">"Изменить ориентацию"</string>
     <string name="settings">"Настройки"</string>
-    <string name="view">"Просмотреть"</string>
+    <string name="view">"Просмотр"</string>
     <string name="details">"Сведения"</string>
     <string name="rotate">"Повернуть"</string>
-    <string name="rotate_left">"Повернуть налево"</string>
-    <string name="rotate_right">"Повернуть направо"</string>
+    <string name="rotate_left">"Повернуть влево"</string>
+    <string name="rotate_right">"Повернуть вправо"</string>
     <string name="slide_show">"Слайд-шоу"</string>
     <string name="capture_picture">"Сделать фотографию"</string>
     <string name="capture_video">"Снять видео"</string>
     <string name="crop_save_text">"Сохранить"</string>
     <string name="crop_discard_text">"Отменить"</string>
-    <string name="confirm_delete_title">"Удаление"</string>
-    <string name="confirm_delete_message">"Изображение будет удалено."</string>
+    <string name="confirm_delete_title">"Удалить"</string>
+    <string name="confirm_delete_message">"Картинка будет удалена."</string>
     <string name="confirm_delete_video_message">"Видео будет удалено."</string>
-    <string name="camera_toss">"Удаление"</string>
-    <string name="camera_gallery">"Галерея"</string>
+    <string name="camera_toss">"Удалить"</string>
+    <string name="camera_gallery">"Фотоальбом"</string>
     <string name="camera_share">"Отправить"</string>
     <string name="camera_set">"Установить как"</string>
     <string name="camera_play">"Воспроизвести"</string>
     <string name="camera_attach">"Вложить"</string>
     <string name="camera_cancel">"Отмена"</string>
     <string name="camera_crop">"Обрезать"</string>
-    <string name="camera_tossing">"Идет удаление…"</string>
-    <string name="no_way_to_share_image">"Отправить это изображение нельзя."</string>
-    <string name="no_way_to_share_video">"Отправить это видео нельзя."</string>
+    <string name="camera_tossing">"Удаление..."</string>
+    <string name="no_way_to_share_image">"Эту фотографию нельзя отправить."</string>
+    <string name="no_way_to_share_video">"Это видео нельзя отправить."</string>
     <string name="video_play">"Воспроизвести"</string>
-    <string name="camera_gallery_photos_text">"Галерея"</string>
-    <string name="camera_pick_wallpaper">"Изображения"</string>
-    <string name="camera_setas_wallpaper">"Фоновый рисунок"</string>
+    <string name="camera_gallery_photos_text">"Фотоальбом"</string>
+    <string name="camera_pick_wallpaper">"Картинки"</string>
+    <string name="camera_setas_wallpaper">"Обои"</string>
     <string name="pref_gallery_category">"Общие настройки"</string>
     <string name="pref_slideshow_category">"Настройки слайд-шоу"</string>
     <string name="pref_camera_general_settings_category">"Общие настройки"</string>
     <string name="pref_gallery_size_title">"Отображаемый размер"</string>
     <string name="pref_gallery_size_summary">"Выбор отображаемого размера изображений и видео"</string>
-    <string name="pref_gallery_size_dialogtitle">"Размер изображения"</string>
+    <string name="pref_gallery_size_dialogtitle">"Размер картинки"</string>
   <string-array name="pref_gallery_size_choices">
-    <item>"Крупный"</item>
-    <item>"Мелкий"</item>
+    <item>"Большой"</item>
+    <item>"Небольшой"</item>
   </string-array>
     <string name="pref_gallery_sort_title">"Порядок сортировки"</string>
     <string name="pref_gallery_sort_summary">"Выберите порядок сортировки изображений и видео"</string>
-    <string name="pref_gallery_sort_dialogtitle">"Сортировка изображений"</string>
+    <string name="pref_gallery_sort_dialogtitle">"Сортировать картинки"</string>
   <string-array name="pref_gallery_sort_choices">
-    <item>"Начиная с новых"</item>
-    <item>"Заканчивая новыми"</item>
+    <item>"Сначала новые"</item>
+    <item>"Сначала старые"</item>
   </string-array>
-    <string name="pref_gallery_slideshow_interval_title">"Интервал слайд-шоу"</string>
-    <string name="pref_gallery_slideshow_interval_summary">"Выберите время отображения каждого слайда"</string>
+    <string name="pref_gallery_slideshow_interval_title">"Интервал в слайд-шоу"</string>
+    <string name="pref_gallery_slideshow_interval_summary">"Выбор длительности показа каждого слайда"</string>
     <string name="pref_gallery_slideshow_interval_dialogtitle">"Интервал слайд-шоу"</string>
   <string-array name="pref_gallery_slideshow_interval_choices">
-    <item>"2 секунды"</item>
-    <item>"3 секунды"</item>
-    <item>"4 секунды"</item>
+    <item>"2 сек."</item>
+    <item>"3 сек."</item>
+    <item>"4 сек."</item>
   </string-array>
-    <string name="pref_gallery_slideshow_transition_title">"Переходы слайд-шоу"</string>
-    <string name="pref_gallery_slideshow_transition_summary">"Выберите эффект для перехода от одного слайда к другому"</string>
-    <string name="pref_gallery_slideshow_transition_dialogtitle">"Переходы слайд-шоу"</string>
+    <string name="pref_gallery_slideshow_transition_title">"Переход в слайд-шоу"</string>
+    <string name="pref_gallery_slideshow_transition_summary">"Выбор эффекта при переходе от одного слайда к другому"</string>
+    <string name="pref_gallery_slideshow_transition_dialogtitle">"Переход в слайд-шоу"</string>
   <string-array name="pref_gallery_slideshow_transition_choices">
-    <item>"Затемнение"</item>
-    <item>"Слайды слева направо"</item>
-    <item>"Слайды сверху вниз"</item>
+    <item>"Затемнение и проявление"</item>
+    <item>"Прокрутка слева направо"</item>
+    <item>"Прокрутка сверху вниз"</item>
     <item>"Случайный выбор"</item>
   </string-array>
-    <string name="pref_gallery_slideshow_repeat_title">"Повторить слайд-шоу"</string>
-    <string name="pref_gallery_slideshow_repeat_summary">"Воспроизвести слайд-шоу несколько раз"</string>
+    <string name="pref_gallery_slideshow_repeat_title">"Повтор слайд-шоу"</string>
+    <string name="pref_gallery_slideshow_repeat_summary">"Воспроизвести слайд-шоу более одного раза"</string>
     <string name="pref_gallery_slideshow_shuffle_title">"Перемешать слайды"</string>
-    <string name="pref_gallery_slideshow_shuffle_summary">"Показывать изображения в случайном порядке"</string>
-    <string name="pref_camera_recordlocation_title">"Сохранять адрес в изображениях"</string>
-    <string name="pref_camera_recordlocation_summary">"Записывать адрес в данные изображения"</string>
+    <string name="pref_gallery_slideshow_shuffle_summary">"Показ фотографий в случайном порядке"</string>
+    <string name="pref_camera_recordlocation_title">"Сохранять местоположение в фотографиях"</string>
+    <string name="pref_camera_recordlocation_summary">"Записывать местоположение в данных фотографии"</string>
     <string name="pref_camera_videoquality_category">"Качество видео"</string>
     <string name="pref_camera_videoquality_title">"Выбор качества видео"</string>
-    <string name="pref_camera_videoquality_entry_0">"Низкое (для MMS)"</string>
-    <string name="pref_camera_videoquality_entry_1">"Высокое (для карты SD)"</string>
+    <string name="pref_camera_videoquality_entry_0">"Низкое (для сообщений MMS)"</string>
+    <string name="pref_camera_videoquality_entry_1">"Высокое (для SD-карты)"</string>
     <string name="pref_camera_videoquality_dialogtitle">"Качество видео"</string>
     <string name="camerasettings">"Настройки"</string>
     <string name="image_gallery_NoImageView_text">"Нет мультимедийных материалов."</string>
-    <string name="pref_gallery_confirm_delete_title">"Подтверждение удаления"</string>
+    <string name="pref_gallery_confirm_delete_title">"Подтверждать удаление"</string>
     <string name="pref_gallery_confirm_delete_summary">"Запрашивать подтверждения перед удалением изображения или видео"</string>
     <string name="details_panel_title">"Сведения"</string>
     <string name="details_file_size">"Размер файла:"</string>
@@ -127,25 +127,25 @@
     <string name="details_hms">"%1$d:%2$02d:%3$02d"</string>
     <string name="details_fps">"%1$d кадров/с"</string>
     <string name="details_kbps">"%1$d кбит/с"</string>
-    <string name="details_mbps">"%1$g мбит/с"</string>
+    <string name="details_mbps">"%1$g Мбит/с"</string>
     <string name="details_ok">"ОК"</string>
-    <string name="context_menu_header">"Параметры изображения"</string>
+    <string name="context_menu_header">"Параметры картинки"</string>
     <string name="video_context_menu_header">"Параметры видео"</string>
-    <string name="multiface_crop_help">"Чтобы начать, выберите лицо."</string>
-    <string name="photos_gallery_title">"Галерея"</string>
-    <string name="pick_photos_gallery_title">"Выбор изображения"</string>
-    <string name="videos_gallery_title">"Галерея"</string>
-    <string name="pick_videos_gallery_title">"Выбрать видео"</string>
+    <string name="multiface_crop_help">"Нажмите лицо, чтобы начать."</string>
+    <string name="photos_gallery_title">"Фотоальбом"</string>
+    <string name="pick_photos_gallery_title">"Выбор картинок"</string>
+    <string name="videos_gallery_title">"Фотоальбом"</string>
+    <string name="pick_videos_gallery_title">"Выбор видео"</string>
     <string name="loading_progress_format_string">"Осталось: <xliff:g id="COUNTER">%d</xliff:g>"</string>
-    <string name="sendImage">"Отправить изображение при помощи"</string>
-    <string name="setImage">"Установить изображение как"</string>
+    <string name="sendImage">"Отправить картинку через"</string>
+    <string name="setImage">"Установить картинку как"</string>
     <string name="sendVideo">"Отправить видео при помощи"</string>
     <string name="movieviewlabel">"Фильмы"</string>
-    <string name="loading_video">"Идет загрузка видео…"</string>
-    <string name="spaceIsLow_title">"Осталось мало места"</string>
-    <string name="spaceIsLow_content">"Место на карте SD заканчивается. Измените настройки качества или удалите элементы из галереи."</string>
+    <string name="loading_video">"Загрузка видео…"</string>
+    <string name="spaceIsLow_title">"Мало свободного места"</string>
+    <string name="spaceIsLow_content">"Место на вашей SD-карте заканчивается. Измените настройки качества или удалите содержимое из фотоальбома."</string>
     <string name="resume_playing_title">"Продолжение просмотра видео"</string>
-    <string name="resume_playing_message">"Продолжить воспроизведение с %s ?"</string>
+    <string name="resume_playing_message">"Продолжить воспроизведение с %s?"</string>
     <string name="resume_playing_resume">"Продолжить воспроизведение"</string>
     <string name="resume_playing_restart">"Начать с начала"</string>
     <string name="gadget_title">"Рамка фотографии"</string>
