--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -28,16 +28,16 @@
     <string name="view_label">"사진 보기"</string>
     <string name="preferences_label">"카메라 설정"</string>
     <string name="wait">"잠시 기다려 주세요..."</string>
-    <string name="no_storage">"카메라를 사용하기 전에 먼저 SD 카드를 넣으세요."</string>
+    <string name="no_storage">"카메라를 사용하려면 SD 카드를 넣으세요."</string>
     <string name="not_enough_space">"SD 카드가 꽉 찼습니다."</string>
     <string name="preparing_sd">"SD 카드 준비중..."</string>
-    <string name="wallpaper">"배경화면 설정 중. 잠시 기다려 주세요..."</string>
+    <string name="wallpaper">"배경화면을 설정하는 중입니다. 잠시 기다려 주세요..."</string>
     <string name="savingImage">"사진 저장 중..."</string>
     <string name="runningFaceDetection">"잠시 기다려 주세요..."</string>
     <string name="flip_orientation">"방향 바꾸기"</string>
     <string name="settings">"설정"</string>
     <string name="view">"보기"</string>
-    <string name="details">"상세정보"</string>
+    <string name="details">"세부정보"</string>
     <string name="rotate">"회전"</string>
     <string name="rotate_left">"왼쪽으로 회전"</string>
     <string name="rotate_right">"오른쪽으로 회전"</string>
@@ -45,21 +45,21 @@
     <string name="capture_picture">"사진촬영"</string>
     <string name="capture_video">"동영상 캡처"</string>
     <string name="crop_save_text">"저장"</string>
-    <string name="crop_discard_text">"무시"</string>
+    <string name="crop_discard_text">"취소"</string>
     <string name="confirm_delete_title">"삭제"</string>
     <string name="confirm_delete_message">"사진이 삭제됩니다."</string>
     <string name="confirm_delete_video_message">"동영상이 삭제됩니다."</string>
     <string name="camera_toss">"삭제"</string>
     <string name="camera_gallery">"갤러리"</string>
     <string name="camera_share">"공유"</string>
-    <string name="camera_set">"사진 설정"</string>
+    <string name="camera_set">"다음으로 설정"</string>
     <string name="camera_play">"재생"</string>
     <string name="camera_attach">"첨부"</string>
     <string name="camera_cancel">"취소"</string>
     <string name="camera_crop">"자르기"</string>
     <string name="camera_tossing">"삭제 중..."</string>
-    <string name="no_way_to_share_image">"공유할 수 없는 사진입니다."</string>
-    <string name="no_way_to_share_video">"공유할 수 없는 동영상입니다."</string>
+    <string name="no_way_to_share_image">"사진을 공유할 수 없습니다."</string>
+    <string name="no_way_to_share_video">"동영상을 공유할 수 없습니다."</string>
     <string name="video_play">"재생"</string>
     <string name="camera_gallery_photos_text">"갤러리"</string>
     <string name="camera_pick_wallpaper">"사진"</string>
@@ -79,7 +79,7 @@
     <string name="pref_gallery_sort_dialogtitle">"사진 정렬"</string>
   <string-array name="pref_gallery_sort_choices">
     <item>"가장 최근 사진 먼저"</item>
-    <item>"가장 최근 사진 마지막에"</item>
+    <item>"가장 오래된 사진 먼저"</item>
   </string-array>
     <string name="pref_gallery_slideshow_interval_title">"슬라이드쇼 간격"</string>
     <string name="pref_gallery_slideshow_interval_summary">"쇼에서 각 슬라이드를 표시할 시간 선택"</string>
@@ -94,30 +94,30 @@
     <string name="pref_gallery_slideshow_transition_dialogtitle">"슬라이드쇼 화면전환"</string>
   <string-array name="pref_gallery_slideshow_transition_choices">
     <item>"페이드 인/아웃"</item>
-    <item>"왼쪽에서 오른쪽으로/오른쪽에서 왼쪽으로"</item>
-    <item>"위에서 아래로/아래에서 위로"</item>
+    <item>"슬라이드 왼쪽 - 오른쪽"</item>
+    <item>"슬라이드 위 - 아래"</item>
     <item>"무작위 선택"</item>
   </string-array>
     <string name="pref_gallery_slideshow_repeat_title">"슬라이드쇼 반복"</string>
     <string name="pref_gallery_slideshow_repeat_summary">"슬라이드쇼를 한 번 이상 재생"</string>
     <string name="pref_gallery_slideshow_shuffle_title">"슬라이드 섞기"</string>
-    <string name="pref_gallery_slideshow_shuffle_summary">"사진을 무작위 순서로 표시"</string>
+    <string name="pref_gallery_slideshow_shuffle_summary">"무작위로 사진 표시"</string>
     <string name="pref_camera_recordlocation_title">"사진에 위치 저장"</string>
     <string name="pref_camera_recordlocation_summary">"사진 데이터에 위치 기록"</string>
     <string name="pref_camera_videoquality_category">"동영상 화질"</string>
     <string name="pref_camera_videoquality_title">"동영상 화질 선택"</string>
-    <string name="pref_camera_videoquality_entry_0">"낮음(MMS 메시지용)"</string>
+    <string name="pref_camera_videoquality_entry_0">"저화질(MMS 메시지용)"</string>
     <string name="pref_camera_videoquality_entry_1">"높음(SD 카드용)"</string>
     <string name="pref_camera_videoquality_dialogtitle">"동영상 화질"</string>
     <string name="camerasettings">"설정"</string>
     <string name="image_gallery_NoImageView_text">"미디어 파일이 없습니다."</string>
     <string name="pref_gallery_confirm_delete_title">"삭제 확인"</string>
     <string name="pref_gallery_confirm_delete_summary">"사진 및 동영상 삭제 전 확인 표시"</string>
-    <string name="details_panel_title">"상세정보"</string>
+    <string name="details_panel_title">"세부정보"</string>
     <string name="details_file_size">"파일 크기:"</string>
     <string name="details_image_resolution">"해상도:"</string>
     <string name="details_duration">"재생 시간:"</string>
-    <string name="details_date_taken">"찍은 날짜:"</string>
+    <string name="details_date_taken">"촬영 날짜:"</string>
     <string name="details_frame_rate">"프레임 속도:"</string>
     <string name="details_bit_rate">"비트 전송률:"</string>
     <string name="details_codec">"코덱:"</string>
@@ -138,11 +138,11 @@
     <string name="pick_videos_gallery_title">"동영상 선택"</string>
     <string name="loading_progress_format_string">"<xliff:g id="COUNTER">%d</xliff:g>개 남음"</string>
     <string name="sendImage">"사진 공유 응용프로그램"</string>
-    <string name="setImage">"사진 설정"</string>
+    <string name="setImage">"사진을 다음으로 설정"</string>
     <string name="sendVideo">"동영상 공유 응용프로그램"</string>
     <string name="movieviewlabel">"영화"</string>
     <string name="loading_video">"동영상 로드 중..."</string>
-    <string name="spaceIsLow_title">"공간부족"</string>
+    <string name="spaceIsLow_title">"공간 부족"</string>
     <string name="spaceIsLow_content">"SD 카드의 공간이 부족합니다. 화질 설정을 변경하거나 갤러리에서 항목을 삭제하세요."</string>
     <string name="resume_playing_title">"동영상 다시 시작"</string>
     <string name="resume_playing_message">"%s에서 재생을 다시 시작하시겠습니까?"</string>
