--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -18,11 +18,10 @@
     <string name="all_images">"Todas as imagens"</string>
     <string name="all_videos">"Todos os vídeos"</string>
     <string name="camera_label">"Câmera"</string>
-    <!-- no translation found for video_camera_label (2899292505526427293) -->
-    <skip />
+    <string name="video_camera_label">"Filmadora"</string>
     <string name="gallery_picker_label">"Galeria"</string>
     <string name="gallery_camera_bucket_name">"Imagens da câmera"</string>
-    <string name="gallery_camera_videos_bucket_name">"Vídeos da câmera"</string>
+    <string name="gallery_camera_videos_bucket_name">"Vídeos de câmera"</string>
     <string name="switch_to_video_lable">"Alternar para vídeo"</string>
     <string name="switch_to_camera_lable">"Alternar para câmera"</string>
     <string name="crop_label">"Cortar imagem"</string>
@@ -30,15 +29,14 @@
     <string name="preferences_label">"Configurações da câmera"</string>
     <string name="wait">"Aguarde..."</string>
     <string name="no_storage">"Insira um cartão SD antes de usar a câmera."</string>
-    <string name="not_enough_space">"Seu cartão SD está cheio."</string>
-    <!-- no translation found for preparing_sd (2914969119574812666) -->
-    <skip />
-    <string name="wallpaper">"Configurando papel de parede, aguarde..."</string>
-    <string name="savingImage">"Salvando imagem..."</string>
+    <string name="not_enough_space">"O seu cartão SD está cheio."</string>
+    <string name="preparing_sd">"Preparando o cartão SD…"</string>
+    <string name="wallpaper">"Configurando o papel de parede, aguarde…"</string>
+    <string name="savingImage">"Salvando imagem…"</string>
     <string name="runningFaceDetection">"Aguarde..."</string>
-    <string name="flip_orientation">"Inverter orientação"</string>
+    <string name="flip_orientation">"Orientação do giro"</string>
     <string name="settings">"Configurações"</string>
-    <string name="view">"Visualizar"</string>
+    <string name="view">"Exibir"</string>
     <string name="details">"Detalhes"</string>
     <string name="rotate">"Girar"</string>
     <string name="rotate_left">"Girar para a esquerda"</string>
@@ -52,47 +50,39 @@
     <string name="confirm_delete_message">"A imagem será excluída."</string>
     <string name="confirm_delete_video_message">"O vídeo será excluído."</string>
     <string name="camera_toss">"Excluir"</string>
-    <!-- no translation found for camera_gallery (815753042966032398) -->
-    <skip />
+    <string name="camera_gallery">"Galeria"</string>
     <string name="camera_share">"Compartilhar"</string>
     <string name="camera_set">"Definir como"</string>
     <string name="camera_play">"Reproduzir"</string>
-    <!-- no translation found for camera_attach (4048659554893435232) -->
-    <skip />
-    <!-- no translation found for camera_cancel (8203341746672085747) -->
-    <skip />
+    <string name="camera_attach">"Anexar"</string>
+    <string name="camera_cancel">"Cancelar"</string>
     <string name="camera_crop">"Cortar"</string>
-    <string name="camera_tossing">"Excluindo..."</string>
+    <string name="camera_tossing">"Excluindo…"</string>
     <string name="no_way_to_share_image">"Esta imagem não pode ser compartilhada."</string>
     <string name="no_way_to_share_video">"Este vídeo não pode ser compartilhado."</string>
-    <!-- no translation found for video_play (5287787282508002895) -->
-    <skip />
+    <string name="video_play">"Reproduzir"</string>
     <string name="camera_gallery_photos_text">"Galeria"</string>
     <string name="camera_pick_wallpaper">"Imagens"</string>
     <string name="camera_setas_wallpaper">"Papel de parede"</string>
     <string name="pref_gallery_category">"Configurações gerais"</string>
     <string name="pref_slideshow_category">"Configurações da apresentação de slides"</string>
     <string name="pref_camera_general_settings_category">"Configurações gerais"</string>
-    <!-- no translation found for pref_gallery_size_title (1363406603879434418) -->
-    <skip />
-    <!-- no translation found for pref_gallery_size_summary (8179967445295243638) -->
-    <skip />
+    <string name="pref_gallery_size_title">"Tamanho da exibição"</string>
+    <string name="pref_gallery_size_summary">"Selecione o tamanho de exibição das imagens e vídeos"</string>
     <string name="pref_gallery_size_dialogtitle">"Tamanho da imagem"</string>
   <string-array name="pref_gallery_size_choices">
     <item>"Grande"</item>
     <item>"Pequeno"</item>
   </string-array>
-    <!-- no translation found for pref_gallery_sort_title (7447949250045443386) -->
-    <skip />
-    <!-- no translation found for pref_gallery_sort_summary (6644398051645595214) -->
-    <skip />
-    <string name="pref_gallery_sort_dialogtitle">"Classificar imagens"</string>
+    <string name="pref_gallery_sort_title">"Ordem de classificação"</string>
+    <string name="pref_gallery_sort_summary">"Selecione a ordem de classificação das imagens e dos vídeos."</string>
+    <string name="pref_gallery_sort_dialogtitle">"Classificação de imagens"</string>
   <string-array name="pref_gallery_sort_choices">
-    <item>"As mais novas primeiro"</item>
-    <item>"As mais novas por último"</item>
+    <item>"Primeiro o mais recente"</item>
+    <item>"Último mais recente"</item>
   </string-array>
     <string name="pref_gallery_slideshow_interval_title">"Intervalo da apresentação de slides"</string>
-    <string name="pref_gallery_slideshow_interval_summary">"Selecione o tempo que cada slide deve ser exibido na apresentação"</string>
+    <string name="pref_gallery_slideshow_interval_summary">"Selecione a duração de exibição de cada slide na apresentação."</string>
     <string name="pref_gallery_slideshow_interval_dialogtitle">"Intervalo da apresentação de slides"</string>
   <string-array name="pref_gallery_slideshow_interval_choices">
     <item>"2 segundos"</item>
@@ -100,63 +90,48 @@
     <item>"4 segundos"</item>
   </string-array>
     <string name="pref_gallery_slideshow_transition_title">"Transição da apresentação de slides"</string>
-    <string name="pref_gallery_slideshow_transition_summary">"Selecione o efeito a ser usado ao passar para o próximo slide"</string>
+    <string name="pref_gallery_slideshow_transition_summary">"Selecione o efeito usado ao passar de um slide para o próximo."</string>
     <string name="pref_gallery_slideshow_transition_dialogtitle">"Transição da apresentação de slides"</string>
   <string-array name="pref_gallery_slideshow_transition_choices">
-    <item>"Suavizar cor"</item>
-    <item>"Deslizar da esquerda para a direita"</item>
-    <item>"Deslizar de cima para baixo"</item>
+    <item>"Aparecimento/desaparecimento gradual (fade in/out)"</item>
+    <item>"Deslizar para a esquerda - direita"</item>
+    <item>"Deslizar para cima - para baixo"</item>
     <item>"Seleção aleatória"</item>
   </string-array>
     <string name="pref_gallery_slideshow_repeat_title">"Repetir apresentação de slides"</string>
-    <string name="pref_gallery_slideshow_repeat_summary">"Reproduzir slides mais de uma vez"</string>
-    <string name="pref_gallery_slideshow_shuffle_title">"Seleção automática de slides"</string>
+    <string name="pref_gallery_slideshow_repeat_summary">"Reproduzir apresentação de slides mais de uma vez"</string>
+    <string name="pref_gallery_slideshow_shuffle_title">"Reproduzir slides aleatoriamente"</string>
     <string name="pref_gallery_slideshow_shuffle_summary">"Mostrar imagens em ordem aleatória"</string>
-    <string name="pref_camera_recordlocation_title">"Armazenar local nas imagens"</string>
-    <string name="pref_camera_recordlocation_summary">"Registrar local nos dados da imagem"</string>
+    <string name="pref_camera_recordlocation_title">"Armazenar o local nas imagens"</string>
+    <string name="pref_camera_recordlocation_summary">"Gravar o local nos dados da imagem"</string>
     <string name="pref_camera_videoquality_category">"Qualidade do vídeo"</string>
-    <!-- no translation found for pref_camera_videoquality_title (3836197291744160920) -->
-    <skip />
+    <string name="pref_camera_videoquality_title">"Selecionar a qualidade do vídeo"</string>
     <string name="pref_camera_videoquality_entry_0">"Baixa (para mensagens MMS)"</string>
     <string name="pref_camera_videoquality_entry_1">"Alta (para cartão SD)"</string>
     <string name="pref_camera_videoquality_dialogtitle">"Qualidade do vídeo"</string>
     <string name="camerasettings">"Configurações"</string>
-    <!-- no translation found for image_gallery_NoImageView_text (409595259802877447) -->
-    <skip />
+    <string name="image_gallery_NoImageView_text">"Nenhuma mídia encontrada."</string>
     <string name="pref_gallery_confirm_delete_title">"Confirmar exclusões"</string>
-    <!-- no translation found for pref_gallery_confirm_delete_summary (5253456492765525245) -->
-    <skip />
+    <string name="pref_gallery_confirm_delete_summary">"Mostrar confirmação antes de excluir uma imagem ou vídeo."</string>
     <string name="details_panel_title">"Detalhes"</string>
     <string name="details_file_size">"Tamanho do arquivo:"</string>
     <string name="details_image_resolution">"Resolução:"</string>
-    <!-- no translation found for details_duration (1028116471387901402) -->
-    <skip />
-    <string name="details_date_taken">"Data em que foi tirada:"</string>
-    <!-- no translation found for details_frame_rate (122397836963498191) -->
-    <skip />
-    <!-- no translation found for details_bit_rate (5632311789455402186) -->
-    <skip />
-    <!-- no translation found for details_codec (5580300450432398126) -->
-    <skip />
-    <!-- no translation found for details_format (3700860266600796363) -->
-    <skip />
-    <!-- no translation found for details_dimension_x (4479200210424701240) -->
-    <skip />
-    <!-- no translation found for details_ms (940634969189855292) -->
-    <skip />
-    <!-- no translation found for details_hms (3215779248094151255) -->
-    <skip />
-    <!-- no translation found for details_fps (2707670327505979317) -->
-    <skip />
-    <!-- no translation found for details_kbps (59196416864960850) -->
-    <skip />
-    <!-- no translation found for details_mbps (3978720645766601106) -->
-    <skip />
-    <!-- no translation found for details_ok (6848594369924424312) -->
-    <skip />
-    <string name="context_menu_header">"Opções de imagem"</string>
+    <string name="details_duration">"Duração:"</string>
+    <string name="details_date_taken">"Data de obtenção:"</string>
+    <string name="details_frame_rate">"Taxa de frame:"</string>
+    <string name="details_bit_rate">"Taxa de bits:"</string>
+    <string name="details_codec">"Codec:"</string>
+    <string name="details_format">"Formato:"</string>
+    <string name="details_dimension_x">"%1$d x %2$d"</string>
+    <string name="details_ms">"%1$02d:%2$02d"</string>
+    <string name="details_hms">"%1$d:%2$02d:%3$02d"</string>
+    <string name="details_fps">"%1$d fps"</string>
+    <string name="details_kbps">"%1$d Kbps"</string>
+    <string name="details_mbps">"%1$g Mbps"</string>
+    <string name="details_ok">"OK"</string>
+    <string name="context_menu_header">"Opções da imagem"</string>
     <string name="video_context_menu_header">"Opções de vídeo"</string>
-    <string name="multiface_crop_help">"Toque em um rosto para começar."</string>
+    <string name="multiface_crop_help">"Toque em uma face para começar."</string>
     <string name="photos_gallery_title">"Galeria"</string>
     <string name="pick_photos_gallery_title">"Selecionar imagem"</string>
     <string name="videos_gallery_title">"Galeria"</string>
@@ -166,23 +141,15 @@
     <string name="setImage">"Definir imagem como"</string>
     <string name="sendVideo">"Compartilhar vídeo via"</string>
     <string name="movieviewlabel">"Filmes"</string>
-    <string name="loading_video">"Carregando vídeo…"</string>
-    <string name="spaceIsLow_title">"Pouco espaço disponível"</string>
-    <string name="spaceIsLow_content">"O cartão SD não possui mais espaço disponível. Altere as configurações de qualidade ou exclua itens da Galeria."</string>
-    <!-- no translation found for resume_playing_title (8996677350649355013) -->
-    <skip />
-    <!-- no translation found for resume_playing_message (5184414518126703481) -->
-    <skip />
-    <!-- no translation found for resume_playing_resume (3847915469173852416) -->
-    <skip />
-    <!-- no translation found for resume_playing_restart (5471008499835769292) -->
-    <skip />
-    <!-- no translation found for gadget_title (259405922673466798) -->
-    <skip />
-    <!-- no translation found for file_info_title (1628963357466012538) -->
-    <skip />
-    <!-- no translation found for video_exceed_mms_limit (3835075281230780010) -->
-    <skip />
-    <!-- no translation found for too_large_to_attach (8944461117941172986) -->
-    <skip />
+    <string name="loading_video">"Carregando vídeo..."</string>
+    <string name="spaceIsLow_title">"O espaço é pouco"</string>
+    <string name="spaceIsLow_content">"O seu cartão SD está sem espaço. Mude a configuração de qualidade ou exclua itens da Galeria."</string>
+    <string name="resume_playing_title">"Retomar vídeo"</string>
+    <string name="resume_playing_message">"Retomar reprodução de %s ?"</string>
+    <string name="resume_playing_resume">"Retomar a reprodução"</string>
+    <string name="resume_playing_restart">"Reiniciar"</string>
+    <string name="gadget_title">"Frame da imagem"</string>
+    <string name="file_info_title">"Informações do arquivo:"</string>
+    <string name="video_exceed_mms_limit">"O vídeo gravado é muito grande para ser enviado via MMS. Tente gravar um clipe mais curto."</string>
+    <string name="too_large_to_attach">"Arquivo muito grande para ser anexado."</string>
 </resources>
