--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -15,17 +15,17 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="all_images">"所有照片"</string>
+    <string name="all_images">"所有图片"</string>
     <string name="all_videos">"所有视频"</string>
     <string name="camera_label">"相机"</string>
-    <string name="video_camera_label">"便携式摄像机"</string>
+    <string name="video_camera_label">"摄像机"</string>
     <string name="gallery_picker_label">"图库"</string>
     <string name="gallery_camera_bucket_name">"用相机拍摄的照片"</string>
     <string name="gallery_camera_videos_bucket_name">"用相机拍摄的视频"</string>
     <string name="switch_to_video_lable">"切换到视频"</string>
     <string name="switch_to_camera_lable">"切换到相机"</string>
-    <string name="crop_label">"修剪照片"</string>
-    <string name="view_label">"查看照片"</string>
+    <string name="crop_label">"修剪图片"</string>
+    <string name="view_label">"查看图片"</string>
     <string name="preferences_label">"相机设置"</string>
     <string name="wait">"请稍候..."</string>
     <string name="no_storage">"使用相机前请先插入 SD 卡。"</string>
@@ -41,13 +41,13 @@
     <string name="rotate">"旋转"</string>
     <string name="rotate_left">"向左旋转"</string>
     <string name="rotate_right">"向右旋转"</string>
-    <string name="slide_show">"幻灯片放映"</string>
+    <string name="slide_show">"播放幻灯片"</string>
     <string name="capture_picture">"拍摄照片"</string>
     <string name="capture_video">"拍摄视频"</string>
     <string name="crop_save_text">"保存"</string>
     <string name="crop_discard_text">"舍弃"</string>
     <string name="confirm_delete_title">"删除"</string>
-    <string name="confirm_delete_message">"将会删除照片。"</string>
+    <string name="confirm_delete_message">"将会删除此照片。"</string>
     <string name="confirm_delete_video_message">"将会删除视频。"</string>
     <string name="camera_toss">"删除"</string>
     <string name="camera_gallery">"图库"</string>
@@ -58,39 +58,39 @@
     <string name="camera_cancel">"取消"</string>
     <string name="camera_crop">"修剪"</string>
     <string name="camera_tossing">"正在删除..."</string>
-    <string name="no_way_to_share_image">"无法分享此照片。"</string>
+    <string name="no_way_to_share_image">"无法分享此图片。"</string>
     <string name="no_way_to_share_video">"无法分享此视频。"</string>
     <string name="video_play">"播放"</string>
     <string name="camera_gallery_photos_text">"图库"</string>
-    <string name="camera_pick_wallpaper">"照片"</string>
+    <string name="camera_pick_wallpaper">"图片"</string>
     <string name="camera_setas_wallpaper">"壁纸"</string>
     <string name="pref_gallery_category">"常规设置"</string>
     <string name="pref_slideshow_category">"幻灯片设置"</string>
     <string name="pref_camera_general_settings_category">"常规设置"</string>
     <string name="pref_gallery_size_title">"显示大小"</string>
     <string name="pref_gallery_size_summary">"选择图片和视频的显示大小"</string>
-    <string name="pref_gallery_size_dialogtitle">"照片大小"</string>
+    <string name="pref_gallery_size_dialogtitle">"图片大小"</string>
   <string-array name="pref_gallery_size_choices">
     <item>"大"</item>
     <item>"小"</item>
   </string-array>
     <string name="pref_gallery_sort_title">"排序顺序"</string>
     <string name="pref_gallery_sort_summary">"选择图片和视频的排序顺序"</string>
-    <string name="pref_gallery_sort_dialogtitle">"照片排序"</string>
+    <string name="pref_gallery_sort_dialogtitle">"图片排序"</string>
   <string-array name="pref_gallery_sort_choices">
-    <item>"最新的照片在最前面"</item>
-    <item>"最新的照片在最后面"</item>
+    <item>"最新的图片在最前面"</item>
+    <item>"最新的图片在最后面"</item>
   </string-array>
-    <string name="pref_gallery_slideshow_interval_title">"幻灯片放映间隔"</string>
-    <string name="pref_gallery_slideshow_interval_summary">"选择每张幻灯片在放映过程中持续显示的时间"</string>
-    <string name="pref_gallery_slideshow_interval_dialogtitle">"幻灯片放映间隔"</string>
+    <string name="pref_gallery_slideshow_interval_title">"幻灯片播放间隔"</string>
+    <string name="pref_gallery_slideshow_interval_summary">"选择每张幻灯片在播放过程中持续显示的时间"</string>
+    <string name="pref_gallery_slideshow_interval_dialogtitle">"幻灯片播放间隔"</string>
   <string-array name="pref_gallery_slideshow_interval_choices">
     <item>"2 秒"</item>
     <item>"3 秒"</item>
     <item>"4 秒"</item>
   </string-array>
     <string name="pref_gallery_slideshow_transition_title">"幻灯片切换"</string>
-    <string name="pref_gallery_slideshow_transition_summary">"选择从一张幻灯片移动到下一张时应用的效果"</string>
+    <string name="pref_gallery_slideshow_transition_summary">"选择幻灯片切换时应用的效果"</string>
     <string name="pref_gallery_slideshow_transition_dialogtitle">"幻灯片切换"</string>
   <string-array name="pref_gallery_slideshow_transition_choices">
     <item>"淡入和淡出"</item>
@@ -98,10 +98,10 @@
     <item>"自上至下滑动"</item>
     <item>"随机选择"</item>
   </string-array>
-    <string name="pref_gallery_slideshow_repeat_title">"重复放映幻灯片"</string>
-    <string name="pref_gallery_slideshow_repeat_summary">"多次播放幻灯片"</string>
-    <string name="pref_gallery_slideshow_shuffle_title">"随机放映幻灯片"</string>
-    <string name="pref_gallery_slideshow_shuffle_summary">"以随机顺序显示照片"</string>
+    <string name="pref_gallery_slideshow_repeat_title">"重复播放幻灯片"</string>
+    <string name="pref_gallery_slideshow_repeat_summary">"循环播放幻灯片"</string>
+    <string name="pref_gallery_slideshow_shuffle_title">"随机播放幻灯片"</string>
+    <string name="pref_gallery_slideshow_shuffle_summary">"以随机顺序显示图片"</string>
     <string name="pref_camera_recordlocation_title">"在照片中存储位置"</string>
     <string name="pref_camera_recordlocation_summary">"在照片数据中记录位置"</string>
     <string name="pref_camera_videoquality_category">"视频画质"</string>
@@ -112,7 +112,7 @@
     <string name="camerasettings">"设置"</string>
     <string name="image_gallery_NoImageView_text">"找不到媒体。"</string>
     <string name="pref_gallery_confirm_delete_title">"确认删除"</string>
-    <string name="pref_gallery_confirm_delete_summary">"在删除图片或视频前显示确认"</string>
+    <string name="pref_gallery_confirm_delete_summary">"在删除图片或视频前显示确认消息"</string>
     <string name="details_panel_title">"详细信息"</string>
     <string name="details_file_size">"文件大小："</string>
     <string name="details_image_resolution">"分辨率："</string>
@@ -129,16 +129,16 @@
     <string name="details_kbps">"%1$d Kbps"</string>
     <string name="details_mbps">"%1$g Mbps"</string>
     <string name="details_ok">"确定"</string>
-    <string name="context_menu_header">"照片选项"</string>
+    <string name="context_menu_header">"图片选项"</string>
     <string name="video_context_menu_header">"视频选项"</string>
     <string name="multiface_crop_help">"点按一张脸开始裁剪。"</string>
     <string name="photos_gallery_title">"图库"</string>
-    <string name="pick_photos_gallery_title">"选择照片"</string>
+    <string name="pick_photos_gallery_title">"选择图片"</string>
     <string name="videos_gallery_title">"图库"</string>
     <string name="pick_videos_gallery_title">"选择视频"</string>
     <string name="loading_progress_format_string">"还剩 <xliff:g id="COUNTER">%d</xliff:g> 个"</string>
-    <string name="sendImage">"分享照片的方式"</string>
-    <string name="setImage">"将照片设置为"</string>
+    <string name="sendImage">"图片分享方式"</string>
+    <string name="setImage">"将图片设置为"</string>
     <string name="sendVideo">"分享视频的方式"</string>
     <string name="movieviewlabel">"电影"</string>
     <string name="loading_video">"正在载入视频..."</string>
