--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -82,7 +82,7 @@
     <item>"As mais recentes por último"</item>
   </string-array>
     <string name="pref_gallery_slideshow_interval_title">"Intervalo da apresentação de diapositivos"</string>
-    <string name="pref_gallery_slideshow_interval_summary">"Seleccionar o tempo de apresentação de cada diapositivo"</string>
+    <string name="pref_gallery_slideshow_interval_summary">"Seleccione o tempo de apresentação de cada diapositivo"</string>
     <string name="pref_gallery_slideshow_interval_dialogtitle">"Intervalo da apresentação de diapositivos"</string>
   <string-array name="pref_gallery_slideshow_interval_choices">
     <item>"2 segundos"</item>
@@ -99,7 +99,7 @@
     <item>"Selecção aleatória"</item>
   </string-array>
     <string name="pref_gallery_slideshow_repeat_title">"Repetir apresentação de diapositivos"</string>
-    <string name="pref_gallery_slideshow_repeat_summary">"Repetir·a·apresentação·de·diapositivos"</string>
+    <string name="pref_gallery_slideshow_repeat_summary">"Repetir a apresentação de diapositivos"</string>
     <string name="pref_gallery_slideshow_shuffle_title">"Reproduzir diapositivos aleatoriamente"</string>
     <string name="pref_gallery_slideshow_shuffle_summary">"Mostrar imagens por ordem aleatória"</string>
     <string name="pref_camera_recordlocation_title">"Armazenar localização nas imagens"</string>
