--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -42,8 +42,8 @@
     <string name="rotate_left">"Roter til venstre"</string>
     <string name="rotate_right">"Roter til højre"</string>
     <string name="slide_show">"Diasshow"</string>
-    <string name="capture_picture">"Fotografer billede"</string>
-    <string name="capture_video">"Fotografer video"</string>
+    <string name="capture_picture">"Tag billede"</string>
+    <string name="capture_video">"Optag video"</string>
     <string name="crop_save_text">"Gem"</string>
     <string name="crop_discard_text">"Kassér"</string>
     <string name="confirm_delete_title">"Slet"</string>
@@ -102,7 +102,7 @@
     <string name="pref_gallery_slideshow_repeat_summary">"Afspil diasshow mere end en gang"</string>
     <string name="pref_gallery_slideshow_shuffle_title">"Bland dias"</string>
     <string name="pref_gallery_slideshow_shuffle_summary">"Vis billeder i tilfældig rækkefølge"</string>
-    <string name="pref_camera_recordlocation_title">"Gem placeringer i billeder"</string>
+    <string name="pref_camera_recordlocation_title">"Gem plac. i billeder"</string>
     <string name="pref_camera_recordlocation_summary">"Registrer placering i billeddata"</string>
     <string name="pref_camera_videoquality_category">"Videokvalitet"</string>
     <string name="pref_camera_videoquality_title">"Vælg videokvalitet"</string>
