--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -32,7 +32,7 @@
     <string name="not_enough_space">"SD 卡已满。"</string>
     <string name="preparing_sd">"正在准备 SD 卡..."</string>
     <string name="wallpaper">"正在设置壁纸，请稍候..."</string>
-    <string name="savingImage">"正在保存照片..."</string>
+    <string name="savingImage">"正在保存图片..."</string>
     <string name="runningFaceDetection">"请稍候..."</string>
     <string name="flip_orientation">"反转方向"</string>
     <string name="settings">"设置"</string>
@@ -74,15 +74,15 @@
     <item>"大"</item>
     <item>"小"</item>
   </string-array>
-    <string name="pref_gallery_sort_title">"排序顺序"</string>
-    <string name="pref_gallery_sort_summary">"选择图片和视频的排序顺序"</string>
+    <string name="pref_gallery_sort_title">"排列顺序"</string>
+    <string name="pref_gallery_sort_summary">"选择图片和视频的排列顺序"</string>
     <string name="pref_gallery_sort_dialogtitle">"图片排序"</string>
   <string-array name="pref_gallery_sort_choices">
     <item>"最新的图片在最前面"</item>
     <item>"最新的图片在最后面"</item>
   </string-array>
     <string name="pref_gallery_slideshow_interval_title">"幻灯片播放间隔"</string>
-    <string name="pref_gallery_slideshow_interval_summary">"选择每张幻灯片在播放过程中持续显示的时间"</string>
+    <string name="pref_gallery_slideshow_interval_summary">"选择每张幻灯片在播放过程中呈现的时间"</string>
     <string name="pref_gallery_slideshow_interval_dialogtitle">"幻灯片播放间隔"</string>
   <string-array name="pref_gallery_slideshow_interval_choices">
     <item>"2 秒"</item>
@@ -93,7 +93,7 @@
     <string name="pref_gallery_slideshow_transition_summary">"选择幻灯片切换时应用的效果"</string>
     <string name="pref_gallery_slideshow_transition_dialogtitle">"幻灯片切换"</string>
   <string-array name="pref_gallery_slideshow_transition_choices">
-    <item>"淡入和淡出"</item>
+    <item>"淡入淡出"</item>
     <item>"自左至右滑动"</item>
     <item>"自上至下滑动"</item>
     <item>"随机选择"</item>
