--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -17,7 +17,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="all_images">"Toutes les images"</string>
     <string name="all_videos">"Toutes les vidéos"</string>
-    <string name="camera_label">"Appareil photo"</string>
+    <string name="camera_label">"Galerie"</string>
     <string name="video_camera_label">"Caméra"</string>
     <string name="gallery_picker_label">"Galerie"</string>
     <string name="gallery_camera_bucket_name">"Photos de l\'appareil"</string>
@@ -26,7 +26,7 @@
     <string name="switch_to_camera_lable">"Passer en mode appareil photo"</string>
     <string name="crop_label">"Rogner l\'image"</string>
     <string name="view_label">"Afficher l\'image"</string>
-    <string name="preferences_label">"Paramètres de l\'appareil photo"</string>
+    <string name="preferences_label">"Paramètres"</string>
     <string name="wait">"Veuillez patienter..."</string>
     <string name="no_storage">"Veuillez insérer une carte SD avant d\'utiliser l\'appareil photo."</string>
     <string name="not_enough_space">"Votre carte SD est pleine."</string>
@@ -52,7 +52,7 @@
     <string name="camera_toss">"Supprimer"</string>
     <string name="camera_gallery">"Galerie"</string>
     <string name="camera_share">"Partager"</string>
-    <string name="camera_set">"Définir comme"</string>
+    <string name="camera_set">"Placez comme papier peint"</string>
     <string name="camera_play">"Lire"</string>
     <string name="camera_attach">"Pièce jointe"</string>
     <string name="camera_cancel">"Annuler"</string>
