--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -17,7 +17,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="all_images">"所有相片"</string>
     <string name="all_videos">"所有影片"</string>
-    <string name="camera_label">"相機"</string>
+    <string name="camera_label">"圖庫"</string>
     <string name="video_camera_label">"攝錄影機"</string>
     <string name="gallery_picker_label">"圖庫"</string>
     <string name="gallery_camera_bucket_name">"相機圖片"</string>
@@ -26,7 +26,7 @@
     <string name="switch_to_camera_lable">"切換為相機"</string>
     <string name="crop_label">"裁剪相片"</string>
     <string name="view_label">"檢視相片"</string>
-    <string name="preferences_label">"相機設定"</string>
+    <string name="preferences_label">"設定"</string>
     <string name="wait">"請稍候…"</string>
     <string name="no_storage">"使用相機前請先插入 SD 卡。"</string>
     <string name="not_enough_space">"SD 卡已滿。"</string>
@@ -52,7 +52,7 @@
     <string name="camera_toss">"刪除"</string>
     <string name="camera_gallery">"圖庫"</string>
     <string name="camera_share">"分享"</string>
-    <string name="camera_set">"設為"</string>
+    <string name="camera_set">"設為桌布"</string>
     <string name="camera_play">"播放"</string>
     <string name="camera_attach">"附加"</string>
     <string name="camera_cancel">"取消"</string>
